# MayaPluginTemplate

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindMaya.cmake  FindMayaPluginHelpers.cmake
scripts/: TODO  install.sh
scripts/yama/: comint.py  load.mel  reload.py  unload.mel
src/: default.hpp  main.cpp  mstreams.cpp  mstreams.hpp  override.hpp
